fix: code font-size too big

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,6 @@ pre,
 code,
 code span {
   font-family: 'Inconsolata', monospace !important;
-  font-size: 1rem;
 }
 
 /* Inline code */
